fix mobile page header overlaps in-page anchors

--- a/sphinx_typlog_theme/static/typlog.css
+++ b/sphinx_typlog_theme/static/typlog.css
@@ -18,6 +18,13 @@ section {
     display: block
 }
 
+:target::before {
+    content: "";
+    display: block;
+    height: 60px;
+    margin: -60px 0 0;
+}
+
 h1 {
     font-size: 2em;
     margin: .67em 0
